fixed scrollbar mobile

--- a/main.css
+++ b/main.css
@@ -286,7 +286,7 @@ nav li {
     z-index: 5;
 }
 
-#mobile_nav_scrolled {
+.mobile_nav_scrolled {
     background: rgba(0,0,0,0.7);
     -webkit-box-shadow: 0px 0px 47px 3px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 0px 47px 3px rgba(0,0,0,0.65);
